--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.4",
     "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
